tests/rosetta/out/Pascal/anonymous-recursion-1.pas
// Generated by Mochi compiler v0.10.26 on 2025-07-16T10:01:12Z
program AnonymousRecursion1;
{$mode objfpc}
{$modeswitch nestedprocvars}
uses SysUtils, fgl, fphttpclient, Classes, Variants, fpjson, jsonparser, fpjsonrtti;

type
  generic TArray<T> = array of T;

function fib(n: integer): integer;
var
  a: integer;
  b: integer;
  i: integer;
  t: integer;
begin
  if (n < 2) then ;
  a := 0;
  b := 1;
  i := 1;
  while (i < n) do
  begin
    t := a + b;
    a := b;
    b := t;
    i := i + 1;
  end;
  result := b;
  exit;
end;

function main(): integer;
begin
  for n in specialize TArray<integer>([0, 1, 2, 3, 4, 5, 10, 40, -1]) do
  begin
    if (n < 0) then
    begin
      writeln('fib undefined for negative numbers');
    end else
    begin
      writeln('fib ' + IntToStr(n) + ' = ' + IntToStr(fib(n)));
    end;
  end;
end;

begin
  main();
end.
